force-app/main/default/objects/b3f__FormResponse__c/b3f__FormResponse__c.object-meta.xml
<CustomObject>
    <label>Form Response</label>
    <nameField>
        <label>Form Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>