force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Browser__c.field-meta.xml
<CustomField>
    <fullName>b3f__Browser__c</fullName>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>