force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3f__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>