force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Data_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>b3f__Data_Version_ID__c</fullName>
    <label>Data Version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>