force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>b3f__Error_Type__c</fullName>
    <defaultValue>&quot;Database&quot;</defaultValue>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>