force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>b3f__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>