force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Fatal_Bug__c.field-meta.xml
<CustomField>
    <fullName>b3f__Fatal_Bug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatal Bug</label>
    <type>Checkbox</type>
</CustomField>