force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Form__c.field-meta.xml
<CustomField>
    <fullName>b3f__Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Form</label>
    <referenceTo>b3f__Form__c</referenceTo>
    <relationshipName>FormResponses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>