force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Form_Live_Duration__c.field-meta.xml
<CustomField>
    <fullName>b3f__Form_Live_Duration__c</fullName>
    <description>TEXT( 
FLOOR( b3f__LastUpdateTime__c  -  b3f__StartTime__c ) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((b3f__LastUpdateTime__c - b3f__StartTime__c)*24,24)) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((b3f__LastUpdateTime__c - b3f__StartTime__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;</description>
    <formula>TEXT(CEILING((b3f__LastUpdateTime__c - b3f__StartTime__c)*24*60)) &amp;&quot; &quot;&amp;  if(CEILING((b3f__LastUpdateTime__c - b3f__StartTime__c)*24*60) &gt; 1, &quot;Minutes&quot;, &quot;Minute&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Live Duration</label>
    <type>Text</type>
</CustomField>