force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__FormJSON__c.field-meta.xml
<CustomField>
    <fullName>b3f__FormJSON__c</fullName>
    <label>FormJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>