force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__IPAddress__c.field-meta.xml
<CustomField>
    <fullName>b3f__IPAddress__c</fullName>
    <label>IPAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>