force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__LastUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>b3f__LastUpdateTime__c</fullName>
    <label>LastUpdateTime</label>
    <type>DateTime</type>
</CustomField>