force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Main_Record_DML_Operation__c.field-meta.xml
<CustomField>
    <fullName>b3f__Main_Record_DML_Operation__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Main Record DML Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>