force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__New_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>b3f__New_Record_ID__c</fullName>
    <label>Main Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>