force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Package_Version__c.field-meta.xml
<CustomField>
    <fullName>b3f__Package_Version__c</fullName>
    <label>Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>