force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Preview_Submission__c.field-meta.xml
<CustomField>
    <fullName>b3f__Preview_Submission__c</fullName>
    <formula>HYPERLINK(&quot;/apex/b3f__PreviewForm?id=&quot; &amp; Id, &quot;Preview Submission&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview Submission</label>
    <type>Text</type>
</CustomField>