force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Screen_Size__c.field-meta.xml
<CustomField>
    <fullName>b3f__Screen_Size__c</fullName>
    <label>Screen Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>