force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__StartTime__c.field-meta.xml
<CustomField>
    <fullName>b3f__StartTime__c</fullName>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>