force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__System_Details__c.field-meta.xml
<CustomField>
    <fullName>b3f__System_Details__c</fullName>
    <formula>b3f__Browser__c &amp; &quot; - &quot; &amp; b3f__Browser_Version__c &amp; &quot; - &quot; &amp; b3f__Operating_System__c &amp; &quot; - &quot; &amp; b3f__Screen_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Details</label>
    <type>Text</type>
</CustomField>