force-app/main/default/objects/b3f__FormResponse__c/fields/b3f__Type__c.field-meta.xml
<CustomField>
    <fullName>b3f__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
            </value>
            <value>
                <fullName>AUTOSAVE</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>